# vipro

./: .gitignore  README.md  build.gradle  settings.gradle
probe3d/: build.gradle
probe3d/src/kz/pompei/vipro/probe3d/: DemoUtils.java  Hello.java  InstancedSpheresDemo.java  VKUtil.java  VulkanCore.java
probe3d/src_resources/org/lwjgl/demo/opengl/fbo/: rasterDepth.fs  rasterDepth.vs
probe3d/src_resources/org/lwjgl/demo/opengl/raytracing/: feedbackSsboTriangle.glsl  hybrid.glsl  hybridSsbo.glsl  hybridSsboTriangle.glsl  hybridSsboUbo.glsl  rasterPhotonMap.fs  rasterPhotonMap.vs  rasterPhotonMapBindless.fs  ssboTriangleStacklessKdTree.glsl  transformFeedback.vs
probe3d/test_src/kz/pompei/vipro/probe3d/: VulkanCoreTest.java
render/core/: CMakeLists.txt  ImageData.cpp  ImageData.h  RenderCore.cpp  RenderCore.h  VDeleter.h  draw_data.cpp  draw_data.h  find_java.cmake  kz_pompei_vipro_core_mediator_RenderCore.cpp  kz_pompei_vipro_core_mediator_RenderCore.h  options.h  use_glfw3.h  use_glm.h  vertex_data.cpp  vertex_data.h  vk_util.cpp  vk_util.h
render/core/shaders/: shader_data.cpp  shader_data.h  tri.frag.spv.hpp  tri.vert.spv.hpp
render/mediator/: build.gradle
render/mediator/shaders/: tri.frag  tri.vert
rust_ast/src/kz/pompei/vipro/rust_ast/: Document.java  GroupValue.java  LongValue.java  Space.java  StrValue.java  Value.java
rust_ast/test_src/kz/pompei/vipro/rust_ast/: DocumentTest.java  GenerateClasses.java
src/kz/pompei/vipro/display/: BracketsType.java  DisplayPort.java
src/kz/pompei/vipro/display/impl/: DisplayBrackets.java  DisplayDiv.java  DisplayRect.java
src/kz/pompei/vipro/painter/: PainterGraphics.java
test_src/kz/pompei/vipro/display/impl/: ComplexTest.java  TestDisplayUtil.java
vipro/: .gitignore  build.gradle
vipro/src/kz/pompei/vipro/: Asd.java  Lola.java
vipro/src/kz/pompei/vipro/display/: DisplayPort.java  DisplayPortImpl.java
vipro/src/kz/pompei/vipro/model/: Block.java  BlockPoint.java  Connection.java  Method.java  MethodArg.java  Oper2.java  Oper2Type.java  Var.java  VarDefinition.java
vipro/src/kz/pompei/vipro/nuclide/: Nuclide.java  ReadNuclideTable.java
vipro/test_src/kz/pompei/vipro/: LoadCsv_dso.java  LolaTest.java
vipro/test_src/kz/pompei/vipro/tmp/: AbstractClassA.java  CounterTest.java  FastClassTest.java
visitors.probe/: build.gradle
visitors.probe/src/kz/pompei/vipro/display/: DisplayExpr.java  Size.java
visitors.probe/src/kz/pompei/vipro/painter/: Painter.java
visitors.probe/test_src/kz/pompei/vipro/tmp/: AbstractClassA.java  AbstractClassATest.java  CounterTest.java
(+141 files in other folders)
